# libigl-example-project

./: CMakeLists.txt  cube.cpp  cube.h  main.cpp
